# playread

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: style.yml  tests.yml
examples/: .gitignore
examples/Wurzel-Flummery/: .gitignore  README.md  generate.sh  wurzel-flummery.yaml
examples/Wurzel-Flummery/no-viola/: script.md
examples/Wurzel-Flummery/voices/: CORPUS_README.txt  README.md
src/playread/: assembly.py  cache.py  cli.py  model.py  script.py  synthesis.py
tests/: test_assembly.py  test_cache.py  test_cli.py  test_script.py
