[project]
name = "playread"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Szymon Łopaciuk", email = "szymon@lopaciuk.eu" }
]
requires-python = ">=3.14"
dependencies = [
    "chatterbox-tts>=0.1.7",
    "click>=8.3.3",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.1",
]

[project.scripts]
playread = "playread:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.44",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
]
